# Warehouse-AI-Suite-

./: LICENSE
warehouse-ai-suite-pro/: LICENSE  Makefile  README.md
warehouse-ai-suite-pro/backend/: Dockerfile  alembic.ini  pyproject.toml
warehouse-ai-suite-pro/backend/app/: main.py
warehouse-ai-suite-pro/backend/app/api/: __init__.py  inventory.py  purchase_orders.py  skus.py  suppliers.py  util.py
warehouse-ai-suite-pro/backend/app/core/: settings.py
warehouse-ai-suite-pro/backend/app/db/: session.py
warehouse-ai-suite-pro/backend/app/db/migrations/: env.py
warehouse-ai-suite-pro/backend/app/db/migrations/versions/: 0001_create_core.py
warehouse-ai-suite-pro/backend/app/models/: __init__.py  inventory.py  purchase_order.py  sku.py  supplier.py
warehouse-ai-suite-pro/backend/app/schemas/: inventory.py  purchase_order.py  sku.py  supplier.py
warehouse-ai-suite-pro/docs/: launch_checklist.md  linkedin_post.txt  repo_blurb.txt  video_demo_script.md
warehouse-ai-suite-pro/docs/screenshots/: README.md
warehouse-ai-suite-pro/infra/: docker-compose.yml
warehouse-ai-suite-pro/scripts/: demo.sh  record_demo.sh  seed_and_demo.sh
