[project]
name = "warehouse-ai-suite"
version = "1.0.0"
description = "Warehouse AI Suite backend (FastAPI + SQLAlchemy + Alembic)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
